Apply review feedback and further cleanup on ElasticsearchNode